samples/_failures_safe/1761247620_61b122_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15d8c78e.c: In function ‘main’:
./samples/SAFE/__tmp_15d8c78e.c:142:18: error: expected ‘)’ at end of input
  142 |     addEdge(graph
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_15d8c78e.c:142:5: error: too few arguments to function ‘addEdge’
  142 |     addEdge(graph
      |     ^~~~~~~
./samples/SAFE/__tmp_15d8c78e.c:45:5: note: declared here
   45 | int addEdge(struct Graph* graph, int src, int dest, int weight) {
      |     ^~~~~~~
./samples/SAFE/__tmp_15d8c78e.c:142:5: error: expected declaration or statement at end of input
  142 |     addEdge(graph
      |     ^~~~~~~
